React-BS applied(npm). Carousel fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,10 +16,32 @@ body {
   font-variation-settings: "FILL" 0, "wght" 700, "GRAD" 200, "opsz" 48;
 }
 
-.max-h-500 {
-  max-height: 500px;
+.max-h-600 {
+  max-height: 600px;
 }
 
-.b-radius-0 {
-  border-radius: 0;
+.carousel-control-prev,
+.carousel-control-next {
+  width: 10%;
+  max-width: 60px;
+  height: 10%;
+  min-height: 40px;
+  max-height: 60px;
+  background-color: #000;
+  border-radius: 50%;
+  top: calc(50% - 25px);
+  opacity: 1;
+}
+
+.carousel-control-prev {
+  left: 5%;
+}
+
+.carousel-control-next {
+  right: 5%;
+}
+
+.carousel-control-prev:hover,
+.carousel-control-next:hover {
+  opacity: 0.5;
 }
