--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  height: 650px;
+  height: 100vh;
 }
 
 a {
@@ -120,4 +120,19 @@ i {
 
 .indent {
   text-indent: 5%;
+}
+
+.spinner-div {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.vh-100 {
+  height: 100vh;
+}
+
+.w-200 {
+  width: 200px;
 }
